# tm-rust-book

./: .gitignore  README.md  mise.toml
advent_of_code_2022/src/: day01.rs
ala_redis/: Cargo.toml
ala_redis/src/: main.rs
bevy/demo-objects/: Cargo.toml
bevy/game-ui/: Cargo.toml  README.md  justfile
bevy/game-ui/assets/shaders/: colors.wgsl  seascape.wgsl  simple.wgsl
bevy/game-ui/src/: main.rs
bevy/game-ui/src/game/: mod.rs
bevy/game-ui/src/ui/: main_menu.rs  options.rs
bevy/gpu_render/: Cargo.toml
bevy/object_picking/: Cargo.toml
bevy/playground/: Cargo.toml  README.md  justfile  tmp.rs
bevy/playground/assets/shaders/: simple.wgsl
bevy/playground/crates/ambient_cg/: Cargo.toml
bevy/playground/crates/ambient_cg/src/: lib.rs
bevy/playground/src/: main.rs  plugins.rs
bevy/playground/src/plugins/: editor.rs  mod.rs
bevy/playground/src/ui/: mod.rs
bevy/samples/: Cargo.toml  justfile
bevy_test/: Cargo.toml
codewars/: Cargo.toml  justfile
dll_started/: Cargo.toml
dll_started/src/: lib.rs
docker/: dockerfile  makefile
docs/: optimizing-bin-size.md
first_game/: Cargo.toml  run.sh
first_game/src/: main.rs
get_started/: Cargo.toml  notes.txt
get_started/rust_book/: Cargo.toml
get_started/samples/: Cargo.toml
get_started/src/: canvas.rs  exercises.rs  garden.rs  guessing_game.rs  hello_world.rs  main.rs  strings.rs  traits.rs
get_started/workspace_lib/: Cargo.toml
how-work-jsonschema/: Cargo.toml  README.md
ice_http/src/: build.rs
ioapp/: Cargo.toml
ioapp/src/: lib.rs  main.rs
managing_project/: Cargo.toml
managing_project/private_lib/: Cargo.toml
managing_project/src/: main.rs
msgpack/: Cargo.toml
patterns/: Cargo.toml
playground-se/: Cargo.toml  README.md  justfile  makefile  mise.toml
playground-se/docs/: sbc.md
playground-se/examples/: dump_test_models.rs  loading_datafiles.rs  parse_local_sbc.rs  parse_sbc.rs  resolve_origina_models.rs
playground-se/examples/tui_inspect_sbc_file/: app.rs  main.rs  ui.rs
playground-se/src/: helpers.rs  lib.rs  main.rs  sbc.rs  types.rs
playground-se/tmp/: assembler.sbc  battery.sbc  blueprint.sbc  example.sbc
pokedex/: Cargo.toml
pokedex/src/: main.rs
practical-rust-projects/catsay/: Cargo.toml
practical-rust-projects/catsay-tui/: Cargo.toml
practical/try-wasm/: Cargo.toml  justfile
practice/: README.md
practice/algo_with_simd/: Cargo.toml
practice/app-catsay/: Cargo.toml
practice/app-compressor/: Cargo.toml  run.sh
practice/app-decompressor/: Cargo.toml
practice/app-tui-text-editor/: Cargo.toml  README.md
practice/auth-from-scratch/: Cargo.toml  README.md  justfile
practice/auth-from-scratch/src/: main.rs
practice/background_tasks/: Cargo.toml  README.md
practice/catsay/: Cargo.toml
practice/cersei-consistent-memory/: Cargo.toml  MEMORY.md
practice/cersei-translate-agent/: Cargo.toml  justfile  mise.toml
practice/cersei-translate-agent/src/: main.rs
practice/cli_app/: Cargo.toml
practice/daemon-process/: Cargo.toml
practice/data-sink/: Cargo.toml  GBP_USD.sqlite  README.md  justfile
practice/data-sink/src/: main.rs
practice/dbus-test/: Cargo.toml
practice/demo-kafka/: Cargo.toml
practice/demo-kafka/src/: kafka.rs  main.rs
practice/demo-medium-server/: Cargo.toml  README.md  makefile
practice/demo-medium-server/cli/demo-server/: Cargo.toml  main.rs
practice/demo-medium-server/cli/demo-server/migrations/: 0000_init.sql
practice/demo-medium-server/libs/queue/: Cargo.toml
practice/demo-medium-server/libs/stripe/: Cargo.toml
practice/demo-medium-server/services/tower/: Cargo.toml
practice/demo-medium-server/services/tower/examples/: tower-service-alone.rs
practice/demo-medium-server/services/users/: Cargo.toml
practice/demo-medium-server/services/users/examples/: users-service-alone.rs
practice/dependency_injection/: Cargo.toml  README.md
practice/keylogger/: Cargo.toml
practice/kvm-hypervisor/: Cargo.toml  README.md
practice/linked-lists/: justfile
practice/linux-dbus/: Cargo.toml
practice/linux-polkit/: Cargo.toml
practice/linux-wayland-widget/: Cargo.toml
practice/lsp-json-parser/: Cargo.toml
practice/memory_aligment/: Cargo.toml
practice/os_keyboard_processor/: Cargo.toml
practice/primitives-async/: Cargo.toml
practice/primitives-mapreduce/: Cargo.toml  justfile
practice/primitives-panic/: Cargo.toml
practice/search-engine/: Cargo.toml  README.md  justfile
practice/search-engine/frontend/: package.json
practice/search-engine/frontend/src/: App.vue
practice/search-engine/src/: lib.rs
practice/simple-balancer/: Cargo.toml  README.md  config.toml
practice/simple-linux-widget/: Cargo.toml  README.md
practice/simple-ringboard/: Cargo.toml
practice/text-editor/: README.md
practice/tokio-graceful-shutdown/: Cargo.toml
practice/try-wasm/: index.js
practice/tui-devlab/: Cargo.toml  README.md
practice/tui-live-chat/: Cargo.toml  README.md
practice/tui-minio/: Cargo.toml
practice/tui-text-editor/: README.md
practice/tui-translator/: Cargo.toml
practice/tui-ytdlp/: Cargo.toml  justfile
practice/tui-ytdlp/src/: main.rs
practice/uptime-server/: Cargo.toml  README.md  index.html
practice/wasm-roguelike/: Cargo.toml  README.md
practice/wayland-daemon/: Cargo.toml  README.md
practice/wayland-window-details/: Cargo.toml
practice/x86_msr/: Cargo.toml
primitives/: Cargo.toml
primitives/async/: Cargo.toml
primitives/clap-simple/: Cargo.toml
primitives/concurrency_channels/: Cargo.toml
primitives/data/: bad_order.txt  (+1 more)
python_module/: Cargo.toml
random-projects/ala_redis/: Cargo.toml
random-projects/ala_redis/src/: main.rs  runtime.rs
random-projects/http/: Cargo.toml
random-projects/http/src/: main.rs
random-projects/simple_vpn/: Cargo.toml
random-projects/simple_vpn/src/: main.rs
reverse_simple/: Cargo.toml
rproc/: Cargo.toml
shttp/: Cargo.toml
start_wgpu/: Cargo.toml
tokio-samples/: Cargo.toml
vulkan/: Cargo.toml
vulkan/src/: main.rs
workspace/: Cargo.toml  README.md  justfile
zero-copy-parser/: Cargo.toml
(+271 files in other folders)
