[package]
name = "playground-se"
version = "0.1.0"
edition = "2024"

[lib]

[[example]]
name = "parse_local_sbc"

[dependencies]
anyhow = "1.0.102"
quick-xml = { version = "0.40.1", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
thiserror = "2.0.18"
