[package]
name = "playground-se"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
quick-xml = { version = "0.40.1", features = ["serialize"] }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
serde_json = "1.0.149"
thiserror = "2.0.18"
