[package]
name = "vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.32.0"
vulkano-shaders = "0.32.0"
# for open a window in winows os
winit = "0.27.5"
vulkano-win = "0.32.0"