[package]
name = "game-ui"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
# members = ["crates/*"]

[dependencies]
bevy_input = "0.18.1"

bevy = { version = "0.18.1", default-features = false, features = [
  "ui",
  "bevy_render",
  "std",
  "wayland",
] }

[dev-dependencies]
bevy_egui = "0.39.1"
bevy-inspector-egui = "0.36.0"

[features]
default = ["dev_native"]
dev = ["bevy/dynamic_linking", "bevy/bevy_dev_tools", "bevy/bevy_ui_debug"]
dev_native = ["dev", "bevy/file_watcher", "bevy/embedded_watcher"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
