cargo-features = ["codegen-backend"]

[package]
name = "game-ui"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
# members = ["crates/*"]

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
  "ui",
  "std",
  "free_camera",
  "bevy_pbr",
  "bevy_render",
  "bevy_shader",
  "bevy_mesh",
] }
bevy_input = "0.18.1"
clap = { version = "4.5.60", features = ["cargo"] }

[dev-dependencies]
bevy_egui = "0.39.1"
bevy-inspector-egui = "0.36.0"

[features]
default = ["dev_native"]
dev = ["bevy/dynamic_linking", "bevy/bevy_dev_tools", "bevy/bevy_ui_debug"]
dev_native = [
  "dev",
  "bevy/3d",               # debug
  "bevy/file_watcher",
  "bevy/embedded_watcher",
  "bevy/wayland",
]

[profile.dev]
codegen-backend = "cranelift"
opt-level = 1

[profile.dev.package."*"]
codegen-backend = "llvm"
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-backend = "llvm"
codegen-units = 1
lto = "thin"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
