[package]
name = "auth-from-scratch"
version = "0.1.0"
edition = "2024"

[dependencies]
jwt = "0.16.0"
keyring = "3.6.3"
rand = "0.10.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["net", "macros"] }
