[package]
name = "data-sink"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-tungstenite = { version = "0.28.2", features = ["tokio-runtime"] }
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
log = { version = "0.4.22", default-features = false }
rust_decimal = "1.36.0"
sea-orm = { version = "1.1.3", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
sea-streamer = { version = "0.5.0", features = [
  "redis",
  "stdio",
  "socket",
  "runtime-tokio",
] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
