[workspace]
resolver = "2"
members = [
  "cli/demo-server",
  "libs/queue",
  "libs/stripe",
  "services/users",
  "services/tower",
  "cli/demo-server",
]

[workspace.dependencies]
tokio = { version = "1.44.1", features = ["full"] }
sqlx = { version = "0.8.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "uuid",
  "json",
] }
