[package]
name = "search-engine"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.106"
web-sys = "0.3.83"

[dev-dependencies]
wasm-bindgen-test = "0.3.56"

# [lints]
# workspace = true

[profile.release]
lto = true        # Link Time Optimization
codegen-units = 1 # Reduce number of codegen units
panic = "abort"   # Abort on panic
