[package]
name = "tui-ytdlp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1" }
crossterm = "0.29.0"
ratatui = "0.30.2"

[profile.release]
opt-level = "s"  # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true  # Ensures debug symbols are removed.
lto = true  # Enables Link-time Optimization.
codegen-units = 1  # Allows compiler to perform better optimization.
