[package]
name = "ala_redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.35"
clap = { version = "4.5.2", features = ["derive"] }
datadog-tracing = "0.2.1"
env_logger = "0.11.3"
lazy_static = "1.4.0"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["full"] }
