[package]
name = "simple_vpn"
version = "0.1.0"
edition = "2021"
description = "https://www.linkedin.com/pulse/implementing-vpn-server-inrust-luis-soares-m-sc--sqvkf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.79"
bincode = "1.3.3"
clap = { version = "4.5.0", features = ["derive"] }
ctrlc = "3.4.2"
env_logger = "0.11.2"
log = "0.4.20"
rand = "0.8.5"
serde = "1.0.196"
serde_derive = "1.0.196"
tokio = { version = "1.36.0", features = ["full"] }
tun = "0.6.1"
tun-tap = "0.1.4"
