[package]
name = "demo-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
serde = { version = "1.0.219", features = ["derive"] }
ulid = { version = "1.2.1", features = ["uuid"] }
futures = "0.3.31"

[lib]
path = "./main.rs"
