[package]
name = "tower-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
hyper = "1.6.0"
hyper-util = { version = "0.1.11", features = ["full"] }
pretty_env_logger = "0.5.0"

[lib]
path = "./lib.rs"

[[example]]
name = "tower-service-alone"
path = "./examples/tower-service-alone.rs"
